added management dashboard with get classes and list classes components also redux

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
     /* background-color: rgba(202, 202, 202, 0.575); */
     /* backgroundColor: #4387e0, */
     /* 3d3776 */
+    background-color:#26a1f5
 }
 
 
